tests/tools/turndefs/routeSampler/errors/no_data_in_interval/routes.tools
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-07-07 11:09:53.172802 by routeSampler.py v1_13_0+1343-240e5d48340
<configuration>
    <edgedata-files value="input_edgedata.xml"/>
    <route-files value="input_routes.rou.xml"/>
    <verbose value="True"/>
    <verbose.histograms value="True"/>
</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
</routes>
